# Swept-Volume-CSG

./: .gitignore  CMakeLists.txt
app/: generalized_sweep.cpp
app/include/: csgFuncs.h  csg_tet.h
cmake/: cellcomplex.cmake  stf.cmake
data/csg/: config_2sphere3d.yaml  config_2sphere3d_Halley.yaml  config_test.yaml  config_tet3d.yaml  config_tet3d_small.yaml  tet3d.yaml  twoSphere3d.yaml
include/sweep/: generalized_sweep.h
src/: adaptive_column_grid.h  bezier_simplex.cpp  bezier_simplex.h  cell_grid.h  cell_msh_io.h  cell_obj_io.h  col_gridgen.cpp  col_gridgen.h  col_gridgen_csg.cpp  col_gridgen_op.cpp  generalized_sweep.cpp  io.cpp  io.h  post_processing.h  ref_crit.cpp  ref_crit.h  tet_quality.cpp  tet_quality.h
tests/: csg_tree_function.cpp  test_csg_sweep.cpp  test_sweep.cpp
